Add color and font size to second line using id selectors

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: #99000067;
     font-family: Verdana, "DejaVu Sans", sans-serif
 }
+
+#second {
+    color: #0010bb;
+    font-size: 36px;
+}
