Fix typo: semicolon missing from odd selector on stylesheet

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: #99000067;
-    font-family: Verdana, "DejaVu Sans", sans-serif
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 #second {
