--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -2,3 +2,8 @@
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
+.click.left{
+    background-color: rgb(0, 0, 0);
+    color: rgb(260, 260, 260);
+    font-weight: 35px;
+}
