--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,12 +1,13 @@
-.click{
+.left,
+.right {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
-.click.left{
+.left {
     background-color: rgb(0, 0, 0);
     color: rgb(260, 260, 260);
     font-weight: 35px;
 }
-.click.right{
+.right {
     background-color: #fff000;
 }
