--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,6 +13,7 @@ body {
 
 .title {
   background: #e3f4ff;
+  margin: 0 auto 8px auto;
   padding: 8px;
   font-size: 16px;
 }
@@ -20,7 +21,7 @@ body {
 .content {
   background: #e3f4ff;
   padding: 16px 8px;
-  margin: 8px auto;
+  margin-bottom: 8px;
 }
 
 .button-container {
@@ -34,5 +35,5 @@ button {
   border: 1px solid #eee;
   padding: 8px 24px;
   display: block;
-  margin: auto 125px;
+  margin: 0 auto;
 }
