--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
+  display: flex;
+  padding: 8px;
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -12,6 +16,10 @@
 }
 
 ul {
+  display: flex;
+  margin: 8px;
+  padding: 8px;
+  gap: 8px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
