--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,14 @@ body {
 }
 
 .header {
+  display: flex;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 8px;
 }
 
 .profile-image {
@@ -44,5 +49,13 @@ a {
 }
 
 ul {
+  display: flex;
+  align-items: center;
   list-style-type: none;
+  gap: 8px;
+}
+.right-side, .left-side {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
