--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -50,9 +50,11 @@ a {
 
 ul {
   display: flex;
+  margin: 0;
+  padding: 0;
   align-items: center;
   list-style-type: none;
-  gap: 8px;
+  gap: 16px;
 }
 .right-side, .left-side {
   display: flex;
